# web-scraper-server

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  periodic_crawl.sh  pyproject.toml  run.py  scrapy.cfg  settings.py
envs/: docker.env  local.env.skeleton
tests/: test_scrapy.py
tests/fixtures/: input.json
web_scraper_server/: main.py  spiders.py
web_scraper_server/scraper/: items.py  main.py  pipelines.py  settings.py  spiders.py
web_scraper_server/static/: styles.css
web_scraper_server/storage/: crud.py  database.py  main.py  models.py  schemas.py
web_scraper_server/templates/: index.html
