[tool.poetry]
name = "web-scraper-server"
version = "0.1.0"
description = ""
authors = ["Vladimir Okonechnikov <vokonechnikov@tetrascience.com>"]
readme = "README.md"
packages = [{include = "web_scraper_server"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.98.0"
uvicorn = {extras = ["standard"], version = "^0.22.0"}
supervisor = "^4.2.5"
scrapy = "^2.9.0"
fnc = "^0.5.3"

[tool.poetry.group.dev.dependencies]
python-dotenv = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
