[tool.poetry]
name = "web-scraper-server"
version = "0.1.0"
description = ""
authors = ["Vladimir Okonechnikov <vokonechnikov@tetrascience.com>"]
readme = "README.md"
packages = [{include = "web_scraper_server"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.99"
uvicorn = {extras = ["standard"], version = "^0.22"}
scrapy = "^2.9"
fnc = "^0.5"
sqlalchemy = "^2.0"
psycopg2 = "^2.9"
jinja2 = "^3.1.2"
httpx = "^0.24.1"

[tool.poetry.group.dev.dependencies]
python-dotenv = "^1.0"
pytest = "^7.4"
black = "^23.3"
isort = "^5.12"
mypy = "^1.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
